# mTP06b-2D-tissue-model

./: AUTHORS  Makefile.am  Makefile.in  README  config.h.in  config.h.in~  configure  configure.ac  configure.scan
autom4te.cache/: output.0  requests  traces.0  traces.1
check/: EAD1_init  in  noEAD_init
check/CV_l/: cvl.awk  cvl.sh  cvl1  cvl2  cvl3  cvl4  cvl5
check/act_time_map/: check.sh  separate0.sh  separate1.sh  separate10.sh  separate5.sh  tmp.awk
src/: TP06b.c  exptab.c  mem.c  syspara.h  system.c  vars_para.c  vars_para.c.annot
src/src_org/: exptab.c  kurata05.c  kurata05_all_inc.c  mem.c  syspara.h  system.c  vars_para.c
